--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -40,6 +40,7 @@ img {
    Welcome Sections
    *******************/
 .welcome {
+  padding: 0 1em;
   display: grid;
   grid-template-rows: 1fr 3fr;
   grid-template-areas:
