--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -112,19 +112,20 @@ img {
 .place-ship {
   display: grid;
   gap: 2rem;
-  grid-template-rows: 1fr 5fr;
+  grid-template-rows: 1fr 4fr;
 }
 
 .place-ship-action {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
-  gap: 2rem;
+  gap: 3em;
 }
 
 .command {
-  font-size: clamp(4ch, 5rem, 7ch);
-  line-height: 1.6rem;
+  font-size: 5rem;
+  line-height: 1rem;
   font-weight: 500;
   color: hsl(0, 0%, 100%);
 }
@@ -144,9 +145,6 @@ img {
 }
 
 .grid {
-  width: 75%;
-  min-height: 100%;
-  margin: 0 auto;
   display: grid;
   gap: 3px;
   grid-template-columns: repeat(10, 1fr);
@@ -154,6 +152,9 @@ img {
 }
 
 .cell {
+  aspect-ratio: 1/1;
+  object-fit: contain;
+  /* width: clamp(7ch, 5rem, 8ch); */
   cursor: pointer;
   border: 2px solid hsl(0, 0%, 100%);
 }
