--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -112,9 +112,10 @@ img {
 .place-ship {
   padding: 0.8em;
   width: min(60rem, 100%);
+  height: 90vh;
   display: grid;
   gap: 1rem;
-  grid-template-rows: 1fr 4fr;
+  grid-template-rows: 1fr 4fr 1fr;
 }
 
 .place-ship-action {
@@ -132,16 +133,20 @@ img {
   color: hsl(0, 0%, 100%);
 }
 
-.place-ship-action > button {
+.change-dir {
   background-color: hsl(0, 0%, 100%);
   color: var(--blue-600);
   cursor: pointer;
   border-radius: var(--radius);
-  font-size: clamp(2vw, 1.4rem, 3vw);
-  font-weight: 400;
+  padding: 1em 2em;
 }
 
-.place-ship-action > button:hover {
+.change-dir > * {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.change-dir:hover {
   background-color: var(--blue-600);
   color: hsl(0, 0%, 100%);
 }
@@ -150,7 +155,6 @@ img {
   display: grid;
   gap: 3px;
   grid-template-columns: repeat(10, 1fr);
-  /* grid-template-rows: repeat(10, 1fr); */
   grid-template-areas:
     'A0 B0 C0 D0 E0 F0 G0 H0 I0 J0'
     'A1 B1 C1 D1 E1 F1 G1 H1 I1 J1'
@@ -171,41 +175,25 @@ img {
   border: 2px solid hsl(0, 0%, 100%);
 }
 
+.place-ship-footer {
+  margin-left: auto;
+}
+
+.next-phase {
+  font-size: 1.4rem;
+  font-weight: 400;
+  background-color: hsl(0, 0%, 100%);
+  color: var(--blue-600);
+  cursor: pointer;
+  border-radius: var(--radius);
+  padding: 1rem 2rem;
+}
+
+.next-phase:hover {
+  background-color: var(--blue-600);
+  color: hsl(0, 0%, 100%);
+}
+
 .disabled {
   display: none;
-}
-
-/* animation */
-.fadeIn {
-  animation: 0.5s fadeIn forwards;
-  animation-delay: 0.5s;
-}
-
-@keyframes fadeIn {
-  from {
-    scale: 0;
-    opacity: 0;
-  }
-
-  to {
-    scale: 1;
-    opacity: 1;
-  }
-}
-
-.fadeOut {
-  animation: 0.5s fadeOut forwards;
-  animation-delay: 0.5s;
-}
-
-@keyframes fadeOut {
-  from {
-    scale: 1;
-    opacity: 1;
-  }
-
-  to {
-    scale: 0;
-    opacity: 0;
-  }
 }
